--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,47 @@
-@import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@import 'tailwindcss';
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: var(--font-montserrat);
+
+  --color-primary: #121e6c;
+  --color-primary-50: #e8eaf8;
+  --color-primary-100: #c3c8ee;
+  --color-primary-200: #9aa6e3;
+  --color-primary-300: #7083d7;
+  --color-primary-400: #4b64cd;
+  --color-primary-600: #0f1a5d;
+  --color-primary-700: #0a1349;
+  --color-primary-800: #070d35;
+  --color-primary-900: #030721;
+
+  --color-secondary: #ee424e;
+  --color-secondary-50: #ffecee;
+  --color-secondary-100: #ffc8cd;
+  --color-secondary-200: #ff9fa5;
+  --color-secondary-300: #ff757e;
+  --color-secondary-400: #f95a64;
+  --color-secondary-600: #d63a45;
+  --color-secondary-700: #b92f3a;
+  --color-secondary-800: #9c2530;
+  --color-secondary-900: #7c1a25;
+
+  --color-brand-gray-dark: #606060;
+  --color-brand-gray-light: #f3f3f3;
+
+  --color-standard-bg: #f6f4f9;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer components {
+  .container {
+    @apply mx-auto;
   }
 }
 
+html,
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply box-border font-sans;
+}
+
+body {
+  background-color: var(--color-standard-bg);
 }
